charts/coder/1.0.0/README.md
# coder

![Version: 1.0.0](https://img.shields.io/badge/Version-1.0.0-informational?style=flat-square) ![Type: application](https://img.shields.io/badge/Type-application-informational?style=flat-square) ![AppVersion: 0.8.6](https://img.shields.io/badge/AppVersion-0.8.6-informational?style=flat-square)

Remote development environments on your infrastructure provisioned with Terraform.

**Homepage:** <https://coder.com>

## Source Code

* <https://github.com/coder/coder>

## Requirements

Kubernetes: `>= 1.19.0-0`

| Repository | Name | Version |
|------------|------|---------|
| https://library-charts.truecharts.org | common | 10.5.1 |

## Values

| Key | Type | Default | Description |
|-----|------|---------|-------------|
| database.host | string | `"postgres"` |  |
| database.name | string | `"coder"` |  |
| database.password | string | `"coder"` |  |
| database.port | int | `5432` |  |
| database.username | string | `"coder"` |  |
| domain | string | `""` |  |
| env.CODER_ACCESS_URL | string | `"{{ .Values.domain }}"` |  |
| env.CODER_ADDRESS | string | `"0.0.0.0:8080"` |  |
| env.CODER_PG_CONNECTION_URL.secretKeyRef.key | string | `"CODER_PG_CONNECTION_URL"` |  |
| env.CODER_PG_CONNECTION_URL.secretKeyRef.name | string | `"postgres-credentials"` |  |
| image.pullPolicy | string | `"IfNotPresent"` |  |
| image.repository | string | `"ghcr.io/coder/coder"` |  |
| image.tag | string | `"v0.8.6"` |  |
| ingress.main.enabled | bool | `false` |  |
| persistence.config.enabled | bool | `true` |  |
| persistence.config.mountPath | string | `"/.config/coderv2"` |  |
| podSecurityContext.fsGroup | int | `1000` |  |
| podSecurityContext.runAsGroup | int | `1000` |  |
| podSecurityContext.runAsUser | int | `1000` |  |
| probes.liveness.path | string | `"/api/v2/buildinfo"` |  |
| probes.liveness.type | string | `"HTTP"` |  |
| probes.readiness.path | string | `"/api/v2/buildinfo"` |  |
| probes.readiness.type | string | `"HTTP"` |  |
| probes.startup.enabled | bool | `false` |  |
| rbac.main.enabled | bool | `true` |  |
| rbac.main.rules[0].apiGroups[0] | string | `""` |  |
| rbac.main.rules[0].resources[0] | string | `"pods"` |  |
| rbac.main.rules[0].verbs[0] | string | `"*"` |  |
| security.PUID | int | `1000` |  |
| service.main.ports.main.port | int | `8080` |  |

----------------------------------------------
Autogenerated from chart metadata using [helm-docs v1.11.0](https://github.com/norwoodj/helm-docs/releases/v1.11.0)
